  datetime's strftime function.

- Fix itertools.count(n) to work with negative numbers again.

- Make regex engine raise MemoryError if allocating memory fails.

- Added support for linking the bsddb module against BerkeleyDB 4.5.x.

- Modifying an empty deque during iteration now raises RuntimeError
  instead of StopIteration.


Library
-------

- Bug #1610795: ctypes.util.find_library works now on BSD systems.

- Fix sort stability in heapq.nlargest() and nsmallest().

- Patch #1504073: Fix tarfile.open() for mode "r" with a fileobj argument.

- Patch #1262036: Prevent TarFiles from being added to themselves under
  certain conditions.

- Patch #1230446: tarfile.py: fix ExFileObject so that read() and tell()
  work correctly together with readline().

- Bug #737202: Make CGIHTTPServer work for scripts in subdirectories.
  Fix by Titus Brown.

- Patch #827559: Make SimpleHTTPServer redirect when a directory URL
  is missing the trailing slash, so that relative links work correctly.
  Patch by Chris Gonnerman.

- Patch #1608267: fix a race condition in os.makedirs() is the directory
  to be created is already there.

- Patch #1610437: fix a tarfile bug with long filename headers.

- Patch #1472877: Fix Tix subwidget name resolution.

- Patch #1594554: Always close a tkSimpleDialog on ok(), even
  if an exception occurs.

- Patch #1538878: Don't make tkSimpleDialog dialogs transient if
  the parent window is withdrawn.

- Patch #1360200: Use unmangled_version RPM spec field to deal with
  file name mangling.

- Patch #1359217: Process 2xx response in an ftplib transfer
  that precedes an 1xx response.

- Patch #1060577: Extract list of RPM files from spec file in
  bdist_rpm

- Bug #1586613: fix zlib and bz2 codecs' incremental en/decoders.

- Patch #1583880: fix tarfile's problems with long names and posix/
  GNU modes.

- Fix codecs.EncodedFile which did not use file_encoding in 2.5.0, and
  fix all codecs file wrappers to work correctly with the "with"