@@ -143,6 +143,8 @@ Extension Modules
 Library
 -------
 
+- Patch #1627441: close sockets properly in urllib2.
+
 - Bug #1610795: ctypes.util.find_library works now on BSD systems.
 
 - Fix sort stability in heapq.nlargest() and nsmallest().
